--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <title>Timestamper</title>
     <meta name="MobileOptimized" content="width">
     <meta name="HandheldFriendly" content="true">
-    <meta name="viewport" content="width=device-width">
     <meta http-equiv="cleartype" content="on">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, user-scalable = no">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <script src="js/lib/minified.js"></script>
     <script src="js/lib/FileSaver.js"></script>
